[project]
authors = [
  {name = "Alexander Schulze", email = "alexander.schulze@bih-charite.de"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "fasadeonfhir @ git+https://github.com/BIH-CEI/fasade-on-fhir@v0.1.1",
  "fastapi~=0.79.1",
  "uvicorn[standard]~=0.18.3",
]
description = "A FHIR facade for the ERKER project"
name = "erkeronfhir"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
packages = ["erkeronfhir"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = [
  ".",
]
testpaths = [
  "./erkeronfhir/tests",
]
